--- a/public/createOrder.html
+++ b/public/createOrder.html
@@ -3,79 +3,146 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pedidos em Tempo Real - Foody Delivery</title>
+    <title>Criar Pedido - Foody Delivery</title>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY"></script>
     <style>
-        body { font-family: Arial, sans-serif; margin: 0; padding: 20px; }
-        h1 { color: #333; }
-        #orderResults, #debugInfo { margin-top: 20px; padding: 10px; background-color: #f0f0f0; }
-        .order { background-color: #fff; border: 1px solid #ddd; padding: 10px; margin-bottom: 10px; }
-        .error { color: red; }
+        body { font-family: Arial, sans-serif; line-height: 1.6; color: #333; margin: 0; padding: 0; background-color: #f4f4f4; }
+        .container { width: 90%; margin: auto; overflow: hidden; padding: 20px; }
+        h1 { color: #333; text-align: center; }
+        .order-list, .map-container { background: #fff; margin-bottom: 20px; padding: 20px; border-radius: 5px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
+        #map { height: 400px; width: 100%; }
+        .order-item { border-bottom: 1px solid #ddd; padding: 10px 0; }
+        .order-item:last-child { border-bottom: none; }
+        select, button { padding: 10px; margin: 5px 0; }
+        button { background-color: #4CAF50; color: white; border: none; cursor: pointer; }
+        button:hover { background-color: #45a049; }
     </style>
 </head>
 <body>
-    <h1>Pedidos em Tempo Real - Foody Delivery</h1>
-    <div id="orderResults"></div>
-    <div id="debugInfo"></div>
+    <div class="container">
+        <h1>Criar Pedido</h1>
+        <div class="order-list">
+            <h2>Pedidos Recebidos</h2>
+            <div id="orderResults"></div>
+        </div>
+        <div class="map-container">
+            <h2>Mapa de Entregas</h2>
+            <div id="map"></div>
+        </div>
+    </div>
 
     <script>
+        // Configuração do Firebase
+        const firebaseConfig = {
+            apiKey: "AIzaSyB-pF2lRStLTN9Xw9aYQj962qdNFyUXI2E",
+            authDomain: "cabana-8d55e.firebaseapp.com",
+            databaseURL: "https://cabana-8d55e-default-rtdb.firebaseio.com",
+            projectId: "cabana-8d55e",
+            storageBucket: "cabana-8d55e.appspot.com",
+            messagingSenderId: "706144237954",
+            appId: "1:706144237954:web:345c10370972486afc779b",
+            measurementId: "G-96Y337GYT8"
+        };
+        firebase.initializeApp(firebaseConfig);
+
+        const db = firebase.firestore();
+        let map;
+        let markers = [];
+
         const firebaseFunctionUrl = 'https://us-central1-cabana-8d55e.cloudfunctions.net/getFoodyOrders';
+        const motoboys = ['boazd3@gmail.com', 'giovanni@example.com', 'moises@example.com', 'felipe.augusto@example.com'];
+
+        function initMap() {
+            map = new google.maps.Map(document.getElementById('map'), {
+                center: {lat: -5.7793, lng: -35.2009}, // Coordenadas de Natal, RN
+                zoom: 12
+            });
+        }
 
         async function fetchOrders() {
-            console.log('Fetching orders...');
-            document.getElementById('debugInfo').innerHTML = '<p>Fetching orders...</p>';
-
+            console.log('Buscando pedidos...');
             try {
                 const response = await axios.get(firebaseFunctionUrl);
-                console.log('Response:', response.data);
-                document.getElementById('debugInfo').innerHTML += `<p>Response received. Status: ${response.status}</p>`;
+                console.log('Resposta:', response.data);
                 displayOrders(response.data);
             } catch (error) {
-                console.error('Error fetching orders:', error);
-                let errorMessage = 'Error loading orders. ';
-                if (error.response) {
-                    errorMessage += `Status: ${error.response.status}. `;
-                    if (error.response.data) {
-                        errorMessage += `Message: ${JSON.stringify(error.response.data)}`;
-                    }
-                } else if (error.request) {
-                    errorMessage += 'No response from server.';
-                } else {
-                    errorMessage += error.message;
-                }
-                document.getElementById('orderResults').innerHTML = `<p class="error">${errorMessage}</p>`;
-                document.getElementById('debugInfo').innerHTML += `<p class="error">${errorMessage}</p>`;
+                console.error('Erro ao buscar pedidos:', error);
+                document.getElementById('orderResults').innerHTML = `<p style="color: red;">Erro ao carregar pedidos.</p>`;
             }
         }
 
         function displayOrders(orders) {
             const orderResults = document.getElementById('orderResults');
             orderResults.innerHTML = '';
+            clearMarkers();
 
             if (!Array.isArray(orders) || orders.length === 0) {
-                orderResults.innerHTML = '<p>No orders found for the period.</p>';
+                orderResults.innerHTML = '<p>Nenhum pedido encontrado para o período.</p>';
                 return;
             }
 
             orders.forEach(order => {
-                const orderElement = document.createElement('div');
-                orderElement.className = 'order';
-                orderElement.innerHTML = `
-                    <h3>Order #${order.id}</h3>
-                    <p>Status: ${order.status}</p>
-                    <p>Total: R$ ${order.orderTotal.toFixed(2)}</p>
-                    <p>Customer: ${order.customer.customerName}</p>
-                    <p>Date: ${new Date(order.date).toLocaleString()}</p>
-                    <p>Address: ${order.deliveryPoint.address}</p>
-                `;
+                const orderElement = createOrderElement(order);
                 orderResults.appendChild(orderElement);
+                addMarker(order);
             });
         }
 
-        // Fetch orders initially
+        function createOrderElement(order) {
+            const orderDiv = document.createElement('div');
+            orderDiv.className = 'order-item';
+            orderDiv.innerHTML = `
+                <h3>Pedido #${order.id}</h3>
+                <p>Status: ${order.status}</p>
+                <p>Total: R$ ${order.orderTotal.toFixed(2)}</p>
+                <p>Cliente: ${order.customer.customerName}</p>
+                <p>Endereço: ${order.deliveryPoint.address}</p>
+                <select id="motoboy-${order.id}">
+                    ${motoboys.map(motoboy => `<option value="${motoboy}">${motoboy}</option>`).join('')}
+                </select>
+                <button onclick="assignOrder('${order.id}')">Atribuir Pedido</button>
+            `;
+            return orderDiv;
+        }
+
+        function addMarker(order) {
+            const lat = order.deliveryPoint.coordinates.lat;
+            const lng = order.deliveryPoint.coordinates.lng;
+            const marker = new google.maps.Marker({
+                position: {lat, lng},
+                map: map,
+                title: `Pedido #${order.id}`
+            });
+            markers.push(marker);
+        }
+
+        function clearMarkers() {
+            markers.forEach(marker => marker.setMap(null));
+            markers = [];
+        }
+
+        function assignOrder(orderId) {
+            const motoboy = document.getElementById(`motoboy-${orderId}`).value;
+            db.collection('orders').doc(orderId).set({
+                motoboy: motoboy,
+                status: 'assigned'
+            }, { merge: true }).then(() => {
+                console.log(`Pedido ${orderId} atribuído para ${motoboy}`);
+                // Atualizar a interface após a atribuição
+                fetchOrders();
+            }).catch((error) => {
+                console.error("Erro ao atribuir pedido: ", error);
+            });
+        }
+
+        // Inicializar o mapa e buscar pedidos
+        initMap();
         fetchOrders();
 
-        // Update every 30 seconds
+        // Atualiza a cada 30 segundos
         setInterval(fetchOrders, 30000);
     </script>
 </body>
