--- a/public/pedidos.html
+++ b/public/pedidos.html
@@ -45,7 +45,7 @@
                 currentUser = user;
                 loadOrders();
             } else {
-                window.location.href = 'login.html'; // Redireciona para a página de login se não estiver autenticado
+                window.location.href = 'index.html'; // Redireciona para a página de login se não estiver autenticado
             }
         });
 
